--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
-    "sfcookies": "^1.0.2"
+    "sfcookies": "^1.0.2",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
